--- a/programmation_fonctionnelle/index.html
+++ b/programmation_fonctionnelle/index.html
@@ -13,7 +13,7 @@
     </div>
     <form action="">
         <button type="button" onclick="stop()">Stop</button>
-        <button type="button" onclick="start()">start</button>
+        <button type="button" onclick="start()">Incrementer</button>
 
     </form>
     <script src="scripts/index.js"></script>
